--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -11,27 +11,27 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: streamlit-app:v1.5
+  name: streamlit-app
   namespace: streamlit
   labels:
-    app.kubernetes.io/name: streamlit-app:v1.5
+    app.kubernetes.io/name: streamlit-app
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: streamlit-app:v1.5
+      app.kubernetes.io/name: streamlit-app
   replicas: 1
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: streamlit-app:v1.5
+        app.kubernetes.io/name: streamlit-app
     spec:
       nodeSelector:
         node-name: private
     spec:
       terminationGracePeriodSeconds: 0
       containers:
-        - name: streamlit-app:v1.5
-          image: vm27/streamlit-app:v1.5
+        - name: streamlit-app
+          image: vm27/streamlit-app
           imagePullPolicy: IfNotPresent
           command: ["streamlit", "run"]
           args:
@@ -54,14 +54,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: streamlit-app:v1.5
+  name: streamlit-app
   namespace: streamlit
   labels:
-    app.kubernetes.io/name: streamlit-app:v1.5
+    app.kubernetes.io/name: streamlit-app
 spec:
   type: ClusterIP
   selector:
-    app.kubernetes.io/name: streamlit-app:v1.5
+    app.kubernetes.io/name: streamlit-app
   ports:
     - port: 80
       targetPort: 8501
@@ -90,7 +90,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: streamlit-app:v1.5
+                name: streamlit-app
                 port:
                   number: 80
 ---
