--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -31,7 +31,7 @@ spec:
       terminationGracePeriodSeconds: 0
       containers:
         - name: streamlit-app
-          image: vm27/streamlit-application
+          image: vm27/streamlit-application:v1.6
           imagePullPolicy: IfNotPresent
           command: ["streamlit", "run"]
           args:
